# basis

./: CMakeLists.txt
base/: CMakeLists.txt
base/strings/: CMakeLists.txt  num_string_conversions.cc  num_string_conversions.h  string_printf.cc  string_printf.h  strings.h  utf_string_conversions.h
tests/: CMakeLists.txt
tests/base/: CMakeLists.txt
tests/base/strings/: CMakeLists.txt  num_string_conversions_test.cc  string_printf_test.cc
